--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,7 +12,8 @@
     <p [(ngModel)]="validarClave" name="validarClave" style="color: red;">{{validarClave}}</p>
     <p [(ngModel)]="validarUser" name="validarUser" style="color: red;">{{validarUser}}</p>
     <input type="submit" (click)="register()" name="Register" value="Register" class="login-submit" />
-    </form>
+    <p style="font-size: 20px; color: #fff;">Ya tienes una cuenta?<a class="registerLink" href="/login" >Iniciar Sesión</a></p>
+</form>
     <div class="underlay-photo"></div>
     <div class="underlay-black"></div> 
 
