--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <header class="header">
-  <button routerLink="quienSoy"  class="error__button error__button--active">Quien Soy</button>
-  <button routerLink="login"  class="error__button error__button--active">LOGIN</button>
-  <button routerLink="home"  class="error__button error__button--active">HOME</button>
+  <nav>
+     <button routerLink="quienSoy"  class="error__button error__button--active">Quien Soy</button>
+  @if(logueado == false){
+    <button routerLink="login" class="error__button error__button--active">LOGIN</button>
+  }@else if(logueado){
+    <button routerLink="home"  class="error__button error__button--active">HOME</button>
+    <button (click)="LogOut()" class="error__button error__button--active">LogOut</button>
+  }
+  </nav>
 </header>
 <router-outlet></router-outlet>
