--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,12 +1,8 @@
 
-main, footer {
-    background-color: #ffffff;
-    color: black;
-}
 main {
     padding: 40px;
     text-align: center;
-    height: 100vh;
+    height: 80vh;
 }
 .game-container {
     display: grid;
@@ -23,11 +19,20 @@ main {
 }
 .game:hover {
     transform: scale(1.05);
+    cursor: pointer;
 }
 footer {
     padding: 20px;
     text-align: center;
+    
 }
+
+.text-copy
+{
+    color: white;
+}
+
+
 
 /* Animaciones */
 @keyframes buttonHover {
@@ -43,4 +48,21 @@ footer {
 
 .explore-button {
     animation: buttonHover 0.3s ease;
+}
+
+.image-home
+{
+    animation: hue-rotate 6s infinite;
+    background: url('../../../assets/img/fondo-home.jpg');
+    background-size: cover;
+    -webkit-filter: grayscale(30%);
+    z-index: -1;
+}
+
+[class*=image] {
+    left: 0;
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
 }
