--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,18 @@
 
-<main>
-    <h2>¡Bienvenido a nuestra web de juegos retro!</h2>
-    <button class="game">Explorar Juegos</button>
-    <div class="game-container">
-        <div class="game">Pac-Man</div>
-        <div class="game">Super Mario Bros</div>
-        <div class="game">Tetris</div>
-        <div class="game">Space Invaders</div>
-        <div class="game">Donkey Kong</div>
-        <div class="game">Street Fighter II</div>
-    </div>
-</main>
 
-<footer>
-    <p>&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
-</footer>
+
+<div class="image-home">
+    <main>
+        <h2>¡Bienvenido a nuestra web de juegos retro!</h2>
+        <button class="game">Explorar Juegos</button>
+        <div class="game-container">
+            <div class="game">Ahorcado</div>
+            <div class="game">Preguntados</div>
+            <div class="game">Mayor o Menor</div>
+        </div>
+    </main>
+    <footer>
+        <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+    </footer>
+
+</div>
