--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,9 +9,10 @@
     <input type="email" class="login-username" [(ngModel)]="correo" autofocus="true" required="true" placeholder="Email" name="correo"/>
     <input type="password" class="login-password" [(ngModel)]="clave" required="true" placeholder="Password" name="clave"/>
     <label [(ngModel)]="validarUser" name="validarUser" style="color: red;">{{validarUser}}</label>
-    <input  type="submit" (click)="login()" name="Login" value="Login" class="login-submit" />
+    <input  type="submit" (click)="singUp()" name="Login" value="Login" class="login-submit" />
+    <button class="login-submit" (click)="llenarCampos(0)">Admin</button>
     <p style="font-size: 20px; color: #fff;">Eres nuevo?<a class="registerLink" routerLink="/register">Crear Usuario</a></p>
-    </form>
+</form>
     <div class="underlay-photo"></div>
     <div class="underlay-black"></div> 
 
