--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,18 +1,15 @@
-
-
-
-<div class="image-home">
-    <main>
-        <h2>¡Bienvenido a nuestra web de juegos retro!</h2>
-        <button class="game">Explorar Juegos</button>
-        <div class="game-container">
-            <div class="game">Ahorcado</div>
-            <div class="game">Preguntados</div>
-            <div class="game">Mayor o Menor</div>
-        </div>
-    </main>
-    <footer>
-        <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
-    </footer>
-
-</div>
+<main>
+    <h2 class="titulo">¡Bienvenido a nuestra web de juegos retro!</h2>
+    <button class="game">Explorar Juegos</button>
+    <div class="game-container">
+        <button routerLink="/juegos/ahorcado" class="game">Ahorcado</button>
+        <button routerLink="/juegos/preguntados" class="game">Preguntados</button>
+        <button routerLink="/juegos/mayorMenor" class="game">Mayor o Menor</button>
+        <button routerLink="/juegos/blackJack" class="game">Black Jack</button>
+    </div>
+</main>
+<footer>
+    <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+</footer>
+<div class="underlay-photo"></div>
+<div class="underlay-black"></div> 
