--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -117,7 +117,7 @@ input {
 }
 .underlay-photo {
   animation: hue-rotate 6s infinite;
-  background: url('https://31.media.tumblr.com/41c01e3f366d61793e5a3df70e46b462/tumblr_n4vc8sDHsd1st5lhmo1_1280.jpg');
+  background: url('../../../assets/img/fondo-home.jpg');
   background-size: cover;
   -webkit-filter: grayscale(30%);
   z-index: -1;
