--- a/src/app/components/quien-soy/quien-soy.component.css
+++ b/src/app/components/quien-soy/quien-soy.component.css
@@ -1,5 +1,3 @@
-
-
 .u-section-1 {
     background-image: none;
 }
@@ -25,65 +23,63 @@
 }
 
 .u-section-1 .u-shape-1 {
-width: 300px;
-height: 300px;
-background-image: none;
---animation-custom_in-translate_x: 50px;
---animation-custom_in-translate_y: 0px;
---animation-custom_in-opacity: 0;
---animation-custom_in-rotate: 180deg;
---animation-custom_in-scale: 0.3;
-margin: 40px auto 0 50px;
+    width: 330px;
+    height: 330px;
+    background-image: none;
+    --animation-custom_in-translate_x: 50px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 180deg;
+    --animation-custom_in-scale: 0.3;
+    margin: 40px auto 0 50px;
 }
 
 
 .u-section-1 .u-image-1 {
-width: 300px;
-height: 300px;
-background-image: url("../../../assets/img/user.jpg");
-background-position: center center;
-background-repeat: no-repeat;
---animation-custom_in-translate_x: 50px;
---animation-custom_in-translate_y: 0px;
---animation-custom_in-opacity: 0;
---animation-custom_in-rotate: 180deg;
---animation-custom_in-scale: 0.3;
-margin: -250px auto 0 0;
+    width: 330px;
+    height: 330px;
+    background-image: url("../../../assets/img/imagen_quien_soy.jpeg");
+    background-position: start center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    --animation-custom_in-translate_x: 70px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 180deg;
+    --animation-custom_in-scale: 0.3;
+    margin: -270px auto 0 0;
 }
 
 .u-section-1 .u-group-2 {
-width: 474px;
-min-height: 501px;
-height: auto;
---animation-custom_in-translate_x: 0px;
---animation-custom_in-translate_y: 300px;
---animation-custom_in-opacity: 0;
---animation-custom_in-rotate: 0deg;
---animation-custom_in-scale: 1;
-margin: -551px 12px 60px auto;
+    width: 474px;
+    min-height: 501px;
+    height: auto;
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
+    margin: -551px 12px 60px auto;
 }
 
 .u-section-1 .u-container-layout-2 {
-padding: 30px 30px 40px;
+    padding: 30px 30px 40px;
 }
 
 .u-section-1 .u-text-1 {
-margin: 0;
+    margin: 0;
 }
 
 .u-section-1 .u-text-2 {
-line-height: 2;
-margin: 30px 0 0;
+    line-height: 2;
 }
 
 .u-section-1 .u-text-3 {
-letter-spacing: 1px;
-margin: 20px 0 0;
+    letter-spacing: 1px;
+    margin: 20px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
-border-style: solid;
-padding: 0;
+    border-style: solid;
+    padding: 0;
 }
 
 .u-section-1 .u-btn-2 {
@@ -93,131 +89,130 @@ padding: 0;
     text-transform: uppercase;
     font-size: 0.875rem;
     font-weight: 700;
-    margin: 36px auto 0 0;
-    padding: 18px 55px 18px 54px;
 }
 
 @media (max-width: 1199px) {
-.u-section-1 .u-sheet-1 {
-    min-height: 970px;
-}
+    .u-section-1 .u-sheet-1 {
+        min-height: 970px;
+    }
 
-.u-section-1 .u-group-1 {
-    width: 565px;
-    min-height: 613px;
-    margin-top: 50px;
-    height: auto;
-}
+    .u-section-1 .u-group-1 {
+        width: 565px;
+        min-height: 613px;
+        margin-top: 50px;
+        height: auto;
+    }
 
-.u-section-1 .u-shape-1 {
-    width: 435px;
-    height: 435px;
-    margin-top: 0;
-    margin-right: 0;
-    margin-left: auto;
-}
+    .u-section-1 .u-shape-1 {
+        width: 435px;
+        height: 435px;
+        margin-top: 0;
+        margin-right: 0;
+        margin-left: auto;
+    }
 
-.u-section-1 .u-image-1 {
-    width: 507px;
-    height: 507px;
-    margin-top: -371px;
-}
+    .u-section-1 .u-image-1 {
+        width: 507px;
+        height: 507px;
+        margin-top: -371px;
+    }
 
-.u-section-1 .u-group-2 {
-    width: 440px;
-    margin-top: -250px;
-    margin-bottom: 57px;
-    height: auto;
-}
+    .u-section-1 .u-group-2 {
+        width: 440px;
+        margin-top: -250px;
+        margin-bottom: 57px;
+        height: auto;
+    }
 }
 
 @media (max-width: 991px) {
-.u-section-1 .u-sheet-1 {
-    min-height: 979px;
-}
+    .u-section-1 .u-sheet-1 {
+        min-height: 979px;
+    }
 
-.u-section-1 .u-group-2 {
-    margin-top: -214px;
-    margin-bottom: 30px;
-}
+    .u-section-1 .u-group-2 {
+        margin-top: -214px;
+        margin-bottom: 30px;
+    }
 
-.u-section-1 .u-container-layout-2 {
-    padding-bottom: 30px;
-}
+    .u-section-1 .u-container-layout-2 {
+        padding-bottom: 30px;
+    }
 }
 
 @media (max-width: 767px) {
-.u-section-1 .u-sheet-1 {
-    min-height: 1170px;
-}
+    .u-section-1 .u-sheet-1 {
+        min-height: 1170px;
+    }
 
-.u-section-1 .u-group-1 {
-    min-height: 590px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-}
+    .u-section-1 .u-group-1 {
+        min-height: 590px;
+        margin-right: initial;
+        margin-left: initial;
+        width: auto;
+    }
 
-.u-section-1 .u-image-1 {
-    width: 480px;
-    height: 480px;
-    margin-top: -344px;
-}
+    .u-section-1 .u-image-1 {
+        width: 480px;
+        height: 480px;
+        margin-top: -344px;
+    }
 
-.u-section-1 .u-group-2 {
-    margin-top: 0;
-    margin-right: auto;
-}
+    .u-section-1 .u-group-2 {
+        margin-top: 0;
+        margin-right: auto;
+    }
 
-.u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-}
+    .u-section-1 .u-container-layout-2 {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 
-.u-section-1 .u-text-1 {
-    width: auto;
-}
+    .u-section-1 .u-text-1 {
+        width: auto;
+    }
 }
 
 @media (max-width: 575px) {
-.u-section-1 .u-sheet-1 {
-    min-height: 990px;
+    .u-section-1 .u-sheet-1 {
+        min-height: 990px;
+    }
+
+    .u-section-1 .u-group-1 {
+        min-height: 365px;
+        width: auto;
+        margin-right: initial;
+        margin-left: initial;
+    }
+
+    .u-section-1 .u-shape-1 {
+        width: 299px;
+        height: 299px;
+        margin-right: 5px;
+    }
+
+    .u-section-1 .u-image-1 {
+        width: 293px;
+        height: 293px;
+        margin-top: -229px;
+    }
+
+    .u-section-1 .u-group-2 {
+        margin-top: 25px;
+        margin-bottom: 50px;
+        margin-right: initial;
+        margin-left: initial;
+        width: auto;
+    }
+
 }
 
-.u-section-1 .u-group-1 {
-    min-height: 365px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-}
-
-.u-section-1 .u-shape-1 {
-    width: 299px;
-    height: 299px;
-    margin-right: 5px;
-}
-
-.u-section-1 .u-image-1 {
-    width: 293px;
-    height: 293px;
-    margin-top: -229px;
-}
-
-.u-section-1 .u-group-2 {
-    margin-top: 25px;
-    margin-bottom: 50px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-}
-
-}
 .u-palette-3-base,
 .u-body.u-palette-3-base,
 section.u-palette-3-base:before,
-.u-palette-3-base > .u-audio-main-layout-wrapper:before,
-.u-palette-3-base > .u-container-layout:before,
-.u-palette-3-base > .u-inner-container-layout:before,
+.u-palette-3-base>.u-audio-main-layout-wrapper:before,
+.u-palette-3-base>.u-container-layout:before,
+.u-palette-3-base>.u-inner-container-layout:before,
 .u-palette-3-base.u-sidenav:before,
 .u-container-layout.u-container-layout.u-palette-3-base:before,
 .u-table-alt-palette-3-base tr:nth-child(even) {
@@ -225,98 +220,160 @@ section.u-palette-3-base:before,
     background-color: #f1c50e;
 }
 
-  
+
 
 .u-image-circle.u-image {
     border-radius: 50% !important;
 }
+
 .u-shape-circle,
 .u-shape-circle:before,
-.u-shape-circle > .u-container-layout {
+.u-shape-circle>.u-container-layout {
     border-radius: 50%;
 }
 
-.contenedor
-{
-    position:fixed;
-    top: 0;
+.contenedor {
+    position: fixed;
     left: 0;
     right: 0;
-    bottom: 0;
-    z-index: -1;
-    background-color: #545555;
+    bottom: 100;
+    text-align: start;
 }
 
-.contenido-principal
-{
+.contenido-principal {
     width: 1200px;
     margin: 0 auto;
 }
 
-.nombre
-{
+.nombre {
     font-size: 30px;
+    color: wheat;
     font-weight: bold;
+    text-align: center;
 }
-p
-{
+
+.nombre-info {
+    font-size: 23px;
+    font-weight: 700;
+    color: wheat;
+}
+
+p {
     font-size: 20px;
     line-height: 2;
 }
 
-.contenedor-section
-{
+.contenedor-section {
     display: flex;
     align-items: center;
-    gap: 20px;   
+    gap: 20px;
 }
 
-.star {
-    background: grey;
+
+
+.main-contenedor {
+    width: 700px;
+    padding: 40px;
+    margin: 0 auto;
+    height: 80vh;
+}
+
+.text-copy {
+    text-align: center;
+    color: wheat;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+[class*=underlay] {
+    left: 0;
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
+}
+
+.underlay-photo {
+    animation: hue-rotate 6s infinite;
+    background: url('../../../assets/img/fondo-home.jpg');
+    background-size: cover;
+    filter: grayscale(30%);
+    z-index: -1;
+}
+
+.underlay-black {
+    background: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+
+@keyframes hue-rotate {
+    from {
+        -webkit-filter: grayscale(30%) hue-rotate(0deg);
+    }
+
+    to {
+        -webkit-filter: grayscale(30%) hue-rotate(360deg);
+    }
+}
+
+.footer {
+   display: flex;
+   justify-content: space-around;
+}
+
+.contacto {
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+}
+
+.Btn {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+    position: relative;
+    /* overflow: hidden; */
+    border-radius: 7px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.svgContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    letter-spacing: 0.8px;
+    border-radius: 10px;
+    transition: all .3s;
+    border: 1px solid rgba(156, 156, 156, 0.466);
+}
+
+.BG {
     position: absolute;
-    width: 10px;
-    height: 10px;
-    content: '';
-    border-radius: 100%;
-    transform: rotate(250deg);
-    opacity: 0.4;
-    animation-name: shimmer;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-  }
-  
-@keyframes shimmer {
-    from {opacity: 0;}
-    to {opacity: 0.7;}
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #181818;
+    z-index: -1;
+    border-radius: 10px;
+    pointer-events: none;
+    transition: all .3s;
 }
 
-.star1 {
-    top: 40%;
-    left: 10%;
-    animation-delay: 1s;
+.Btn:hover .BG {
+    transform: rotate(35deg);
+    transform-origin: bottom;
 }
 
-.star2 {
-    top: 60%;
-    left: 90%;
-    animation-delay: 3s;
+.Btn:hover .svgContainer {
+    background-color: rgba(156, 156, 156, 0.466);
+    backdrop-filter: blur(4px);
 }
-  
-.star3 {
-    top: 10%;
-    left: 70%;
-    animation-delay: 2s;
-}
-
-.star4 {
-    top: 90%;
-    left: 40%;
-}
-
-.star5 {
-    top: 70%;
-    left: 55%;
-    animation-delay: 0.5s;
-}
-  
