--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h2 class="titulo">¡Bienvenido a nuestra web de juegos retro!</h2>
+    <h2 class="titulo">¡Bienvenido a nuestro home!</h2>
     <button class="game">Explorar Juegos</button>
     <div class="game-container">
         <button routerLink="/juegos/ahorcado" class="game">Ahorcado</button>
@@ -9,7 +9,7 @@
     </div>
 </main>
 <footer>
-    <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+    <p class="text-copy">&copy; 2024 ng Juegos. Todos los derechos reservados.</p>
 </footer>
 <div class="underlay-photo"></div>
 <div class="underlay-black"></div> 
