--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -17,6 +17,45 @@
           <h2 class="nombre">Conocimientos</h2>
           <p class="nombre-info">A lo largo de la cursada fui adquiriendo conocimientos en los siguientes lenguajes de programación: Python, C#, PHP, TypeScript.</p>
           <p class="nombre-info">Frameworks: .NET, Angular.</p>
+          <h2 class="nombre">Juego Seleccionado: BLACKJACK</h2>
+          <p class="nombre-info"><b>Objetivo:</b> El objetivo de este juego es conseguir una puntuación superior a la del delaer sin exceder de 21 puntos.</p>
+          <p class="nombre-info">Funcionalidad: Se encontrará con un botón para iniciar la mano donde se van a repartir 2 cartas, una para el dealer y otra para el jugador.
+          </p>
+          <p class="nombre-info"><b>Botones:</b></p>
+          <div class="boton-texto">
+            <svg
+            class="stroke-teal-500 fill-none group-hover:fill-teal-800 group-active:stroke-teal-200 group-active:fill-teal-600 group-active:duration-0 duration-300"
+            viewBox="0 0 24 24"
+            height="50px"
+            width="50px"
+            xmlns="http://www.w3.org/2000/svg"
+            >
+            <path
+              stroke-width="1.5"
+              d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z"
+            ></path>
+            <path stroke-width="1.5" d="M8 12H16"></path>
+            <path stroke-width="1.5" d="M12 16V8"></path>
+            </svg>
+            <p class="nombre-info">Pedir una carta más.</p>
+          </div>
+
+          <div class="boton-texto">
+              <svg
+                class="stroke-red-500 fill-none group-hover:fill-red-800 group-active:stroke-red-200 group-active:fill-red-600 group-active:duration-0 duration-300"
+                viewBox="0 0 24 24"
+                height="50px"
+                width="50px"
+                xmlns="http://www.w3.org/2000/svg"
+                >
+                <path
+                  stroke-width="1.5"
+                  d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z"
+                ></path>
+                <path stroke-width="1.5" d="M8 12H16"></path>
+              </svg>
+              <p class="nombre-info">Dejar de jugar. Comienza el dealer.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -64,7 +103,7 @@
       <span class="BG"></span>
      </button>
   </div>
-  <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+  <p class="text-copy">&copy; 2024 ng Juegos. Todos los derechos reservados.</p>
   <div></div>
 </footer>
 <div class="underlay-photo"></div>
