--- a/src/app/components/juegos/ahorcado/ahorcado.component.html
+++ b/src/app/components/juegos/ahorcado/ahorcado.component.html
@@ -90,7 +90,7 @@
         }
 </main>
 <footer>
-    <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+    <p class="text-copy">&copy; 2024 ng Juegos. Todos los derechos reservados.</p>
 </footer>
 <div class="underlay-photo"></div>
 <div class="underlay-black"></div> 
