--- a/src/app/components/juegos/black-jack/black-jack.component.css
+++ b/src/app/components/juegos/black-jack/black-jack.component.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     height: 700px;
+    margin: 0 auto;
 }
 
 
@@ -54,6 +55,8 @@
   color: black;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-shadow: #fbff00 .05em  .05em 0;
+  text-align: center;
+  margin-top: 0;
 }
 
 /* TEXTO FINAL JUEGO */
@@ -62,6 +65,8 @@
     font-size: 25px;
     font-weight: 700;
     color: wheat;
+    text-align: center;
+    margin-top: 10px;
 }
 
 /* FOOTER */
@@ -83,17 +88,21 @@
 
 #player-hand, #dealer-hand {
     display: flex;
+    margin-bottom: 15px;
+
 }
   
 #player-hand img, #dealer-hand img {
     width: 85px;
     height: 130px;
     margin-right: 10px;
+    margin: 0 auto;
 }
   
-  #actions button {
-    margin-right: 10px;
+#actions {
+    margin: 0 auto;
 }
+
   
 .cartas
 {
@@ -107,6 +116,7 @@
     color: wheat;
     font-size: 25px;
     font-weight: 700;
+    text-align: center;
 }
 
 
