--- a/src/app/components/juegos/mayor-menor/mayor-menor.component.html
+++ b/src/app/components/juegos/mayor-menor/mayor-menor.component.html
@@ -2,32 +2,31 @@
     <div class="container">
         <h1 class="titulo">Mayor o Menor</h1>
         <p>Puntuación: {{ puntos }}</p>
-        @if(!perdiste && cartaActual && cartas.length > 1)
-        {
-            <div>
+        <div>
+            @if(this.cartaActual)
+            {
                 <img [src]="cartaActual.image" alt="{{ cartaActual.code }}" class="carta">
                 <div>
-                    <button class="boton-carta" (click)="play('mayor')" [disabled]="cartas.length <= 1">
+                    <button class="boton-carta" (click)="play('mayor')" >
                         <a>Mayor</a>
                     </button>
-                    <button class="boton-carta" (click)="play('menor')" [disabled]="cartas.length <= 1">
+                    <button class="boton-carta" (click)="play('menor')" >
                         <a>Menor</a>
                     </button>
                 </div>
-            </div>
-        }
-
-        @if(perdiste)
+            }   
+        </div>
+        <!-- @if(perdiste)
         {
             <p class="texto-final">Fin del juego. Puntuación final: {{ puntos }}</p>
-        }
+        } -->
         <button class="boton-carta" (click)="iniciarJuego()">
             <a>Nuevo Juego</a>
         </button>
     </div>
 </main>
 <footer>
-    <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+    <p class="text-copy">&copy; 2024 ng Juegos. Todos los derechos reservados.</p>
 </footer>
 <div class="underlay-photo"></div>
 <div class="underlay-black"></div> 
