--- a/src/app/components/quien-soy/quien-soy.component.css
+++ b/src/app/components/quien-soy/quien-soy.component.css
@@ -69,7 +69,6 @@
 }
 
 .u-section-1 .u-text-2 {
-    line-height: 2;
 }
 
 .u-section-1 .u-text-3 {
@@ -253,20 +252,20 @@ section.u-palette-3-base:before,
 }
 
 .nombre-info {
-    font-size: 23px;
+    font-size: 20px;
     font-weight: 700;
     color: wheat;
 }
 
 p {
     font-size: 20px;
-    line-height: 2;
 }
 
 .contenedor-section {
     display: flex;
     align-items: center;
     gap: 20px;
+    width:100%;
 }
 
 
@@ -274,8 +273,8 @@ p {
 .main-contenedor {
     width: 700px;
     padding: 40px;
-    margin: 0 auto;
-    height: 80vh;
+    margin: 0 10px;
+    height: 82vh;
 }
 
 .text-copy {
@@ -376,4 +375,11 @@ p {
 .Btn:hover .svgContainer {
     background-color: rgba(156, 156, 156, 0.466);
     backdrop-filter: blur(4px);
+}
+
+.boton-texto
+{
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
