--- a/src/app/components/juegos/preguntados/preguntados.component.html
+++ b/src/app/components/juegos/preguntados/preguntados.component.html
@@ -58,14 +58,13 @@
                 </div>
             }
         </div>
-       
     }
     @else {
         <button class="boton-iniciar" (click)="reiniciar()">Iniciar Juego</button>
     }
 </main>
 <footer>
-    <p class="text-copy">&copy; 2024 Web de Juegos. Todos los derechos reservados.</p>
+    <p class="text-copy">&copy; 2024 ng Juegos. Todos los derechos reservados.</p>
 </footer>
 <div class="underlay-photo"></div>
 <div class="underlay-black"></div> 
